--- a/HospitalSystem/HospitalSystem/systemapp/static/css/style.css
+++ b/HospitalSystem/HospitalSystem/systemapp/static/css/style.css
@@ -5382,6 +5382,9 @@ button.bg-dark:focus {
 .w-50 {
   width: 50% !important; }
 
+.w-55 {
+  width: 54% !important; }
+
 .w-75 {
   width: 75% !important; }
 
