--- a/HospitalSystem/HospitalSystem/systemapp/templates/customer_console_main.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/customer_console_main.html
@@ -2,114 +2,163 @@
 
 {% block content %}
 
-{#    Add Appointments Card    #}
 <div class="row">
-   <div class="col-3">
-        <div class="card">
-            <div class="card-body">
-                <div class="text-center">
-                    <span class="display-5"><i class="icon-emotsmile gradient-3-text"></i></span>
-                    <h2 class="mt-3" data-locale="Standard"></h2>
-                    <p data-locale="Get a regular check for your pet"></p>
-                    <a href="#" class="btn gradient-3 btn-lg border-0 btn-rounded px-5 " data-toggle="modal" data-target="#standardModal" data-locale="Book now">Book now</a>
-                    <div class="modal fade" id="standardModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel" data-locale="Standard Appointment"></h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
-                                    </button>
+
+    <div class="col-6">
+
+        <div class="row">
+           <div class="col-6">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="text-center">
+                            <span class="display-5"><i class="icon-emotsmile gradient-3-text"></i></span>
+                            <h2 class="mt-3" data-locale="Standard"></h2>
+                            <p data-locale="Get a regular check for your pet"></p>
+                            <a href="#" class="btn gradient-3 btn-lg border-0 btn-rounded px-5 " data-toggle="modal" data-target="#standardModal" data-locale="Book now">Book now</a>
+                            <div class="modal fade" id="standardModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLabel" data-locale="Standard Appointment"></h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <form  action="" method="post" >
+                                            <div class="modal-body">
+                                                <h4 data-locale="Add your appointment details here"></h4>
+                                                {{ form.hidden_tag() }}
+                                                <div class="form-group row">
+                                                    <h5 class="modal-title col-4" data-locale="Choose pets"></h5>
+                                                    {{ form.pets(class="form-control col-7", id="pets") }}
+                                                </div>
+                                                <div class="form-group row">
+                                                    <h5 class="modal-title col-4" data-locale="Location"></h5>
+                                                    {{ form.location(class="form-control col-7") }}
+                                                </div>
+                                                <div class="form-group">
+                                                    <h5 class="modal-title col-4" data-locale="Description"></h5><br>
+                                                    {{ form.description(class="form-control", id="message-text") }}
+                                                </div>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-dismiss="modal" data-locale="Close"></button>
+                                                {{ form.submit(class="btn btn-primary") }}
+                                            </div>
+                                        </form>
+                                    </div>
                                 </div>
-                                <form  action="" method="post" >
-                                    <div class="modal-body">
-                                        <h4 data-locale="Add your appointment details here"></h4>
-                                        {{ form.hidden_tag() }}
-                                        <div class="form-group row">
-                                            <h5 class="modal-title col-4" data-locale="Choose pets"></h5>
-                                            {{ form.pets(class="form-control col-7", id="pets") }}
-                                        </div>
-                                        <div class="form-group row">
-                                            <h5 class="modal-title col-4" data-locale="Location"></h5>
-                                            {{ form.location(class="form-control col-7") }}
-                                        </div>
-                                        <div class="form-group">
-                                            <h5 class="modal-title col-4" data-locale="Description"></h5><br>
-                                            {{ form.description(class="form-control", id="message-text") }}
-                                        </div>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary" data-dismiss="modal" data-locale="Close"></button>
-                                        {{ form.submit(class="btn btn-primary") }}
-                                    </div>
-                                </form>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+           <div class="col-6">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="text-center">
+                            <span class="display-5"><i class="icon-grid gradient-9-text"></i></span>
+                            <h2 class="mt-3" data-locale="Emergency"></h2>
+                            <p data-locale="Dont worry we got you"></p>
+                            <a href="#" class="btn gradient-9 btn-lg border-0 btn-rounded px-5" data-toggle="modal" data-target="#emergencyModal" data-locale="Call now"></a>
+                            <div class="modal fade" id="emergencyModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLabel" data-locale="Emergency Appointment"></h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <form action="" method="post">
+                                            <div class="modal-body">
+                                                <h4 data-locale="Just choose one pet"></h4>
+                                                {{ form0.hidden_tag() }}
+                                                <div class="form-group row">
+                                                    <h5 class="modal-title col-4" data-locale="Choose pets"></h5>
+                                                    {{ form0.pets(class="form-control col-7", id="pets") }}
+                                                </div>
+                                                <div class="form-group row">
+                                                    <h5 class="modal-title col-4" data-locale="Location"></h5>
+                                                    {{ form0.location(class="form-control col-7") }}
+                                                </div>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-dismiss="modal" data-locale="Close"></button>
+                                                {{ form0.submit(class="btn btn-primary", id="submit") }}
+                                            </div>
+                                        </form>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+           </div>
+           {% if get_flashed_messages()[0] %}
+               <script>
+                    alert("{{ get_flashed_messages()[0] }}");
+               </script>
+           {% endif %}
+        </div>
+
+        <div class="row">
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title" data-locale="Latest News"></h4>
+                    <div class="bootstrap-carousel">
+                        <div data-ride="carousel" class="carousel slide" id="carouselExampleCaptions">
+                            <ol class="carousel-indicators">
+                                                <li class="" data-slide-to="0" data-target="#carouselExampleCaptions"></li>
+                                                <li data-slide-to="1" data-target="#carouselExampleCaptions" class=""></li>
+                                                <li data-slide-to="2" data-target="#carouselExampleCaptions" class="active"></li>
+                                            </ol>
+                            <div class="carousel-inner">
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="../static/images/index_img/gallery/6.jpg" alt="">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <p data-locale="Q1"></p>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img alt="" class="d-block w-100" src="../static/images/index_img/gallery/3.jpg">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <p data-locale="Q2"></p>
+                                    </div>
+                                </div>
+                                <div class="carousel-item active">
+                                    <img alt="" class="d-block w-100" src="../static/images/index_img/gallery/1.jpg">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <p data-locale="Q2"></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <a data-slide="prev" href="#carouselExampleCaptions" class="carousel-control-prev">
+                                <span class="carousel-control-prev-icon"></span>
+                                <span class="sr-only" data-locale="Previous"></span>
+                            </a>
+                            <a data-slide="next" href="#carouselExampleCaptions" class="carousel-control-next">
+                                <span class="carousel-control-next-icon"></span>
+                                <span class="sr-only" data-locale="Next"></span>
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-   <div class="col-3">
-        <div class="card">
-            <div class="card-body">
-                <div class="text-center">
-                    <span class="display-5"><i class="icon-grid gradient-9-text"></i></span>
-                    <h2 class="mt-3" data-locale="Emergency"></h2>
-                    <p data-locale="Dont worry we got you"></p>
-                    <a href="#" class="btn gradient-9 btn-lg border-0 btn-rounded px-5" data-toggle="modal" data-target="#emergencyModal" data-locale="Call now"></a>
-                    <div class="modal fade" id="emergencyModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel" data-locale="Emergency Appointment"></h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                                <form action="" method="post">
-                                    <div class="modal-body">
-                                        <h4 data-locale="Just choose one pet"></h4>
-                                        {{ form0.hidden_tag() }}
-                                        <div class="form-group row">
-                                            <h5 class="modal-title col-4" data-locale="Choose pets"></h5>
-                                            {{ form0.pets(class="form-control col-7", id="pets") }}
-                                        </div>
-                                        <div class="form-group row">
-                                            <h5 class="modal-title col-4" data-locale="Location"></h5>
-                                            {{ form0.location(class="form-control col-7") }}
-                                        </div>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary" data-dismiss="modal" data-locale="Close"></button>
-                                        {{ form0.submit(class="btn btn-primary", id="submit") }}
-                                    </div>
-                                </form>
 
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-   </div>
-   {% if get_flashed_messages()[0] %}
-       <script>
-            alert("{{ get_flashed_messages()[0] }}");
-       </script>
-   {% endif %}
-</div>
 
-{#    Show Appointments Card    #}
-<div class="row">
     <div class="col-6">
-    <div class="card card-widget">
+{#  Show appointments  #}
+        <div class="card card-widget">
         <div class="card-body">
             <h2 class="mt-4" data-locale="My Appointments"></h2>
             <h5 class="text-muted"><a data-locale="This year I have made"></a>
                 {{ appointmant_num }}
-               <a data-locale="appointments"> appointments</a></h5>
+               <a data-locale="appointments"></a></h5>
             {% for a in appointment_details %}
                 <div class="mt-4">
-                    <h4>{{ a.pet_id }}</h4>
+                    <h4>{{ pet_names[a.pet_id] }}</h4>
                     <h6>
                         <a data-locale="Appointment Status"></a>
                         {% if a.status == 0 %}
@@ -140,32 +189,10 @@
                     </div>
                 </div>
             {% endfor %}
-{#            <div class="mt-4">#}
-{#                <h4>1,250</h4>#}
-{#                <h6 class="m-t-10 text-muted">Offline Earning <span class="pull-right">50%</span></h6>#}
-{#                <div class="progress mb-3" style="height: 7px">#}
-{#                    <div class="progress-bar gradient-3" style="width: 50%;" role="progressbar"><span class="sr-only">50% Complete</span>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#            <div class="mt-4">#}
-{#                <h4>1,250</h4>#}
-{#                <h6 class="m-t-10 text-muted">Yearly Saving <span class="pull-right">35%</span></h6>#}
-{#                <div class="progress mb-3" style="height: 7px">#}
-{#                    <div class="progress-bar gradient-4" style="width: 35%;" role="progressbar"><span class="sr-only">35% Complete</span>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-            <!-- <div class="mt-4">
-                <h4>5,250</h4>
-                <h6 class="m-t-10 text-muted">Budget Pending <span class="pull-right">70%</span></h6>
-                <div class="progress mb-3" style="height: 7px">
-                    <div class="progress-bar gradient-8" style="width: 70%;" role="progressbar"><span class="sr-only">70% Complete</span>
-                    </div>
-                </div>
-            </div> -->
         </div>
     </div>
-  </div>
+    </div>
+
 </div>
+
 {% endblock %}
